feat(users): authentication and management
